<resources>
    <string name="tvAGaged">Are there any AG members over 65, blind, or disabled?</string>
    <string name="app_name">Ohio Legal Aid Assistant</string>
    <string name="add_cm">Add new case management site</string>
    <string name="edit_cm">Edit case management sites</string>
    <string name="AGSize">AG Size</string>
    <string name="deemedIncome">Deemed/Allocable Income</string>
    <string name="dependentCare">Dependent care</string>
    <string name="grossEarnedIncome">Gross Earned Income</string>
    <string name="hoursPerWeek">Hours per week</string>
    <string name="OWFClear">Clear</string>
    <string name="OWFSubmit">Submit</string>
    <string name="unearnedIncome">Unearned Income</string>
    <string name="tvAGSize">Assistance Group Size:</string>
    <string name="tvDeemedIncome">Deemed/Allocable Income per Month</string>
    <string name="tvGrossEarnedIncome">Gross Earned Income:</string>
    <string name="tvHoursPerWeek">At how many hours per week?</string>
    <string name="tvUnearnedIncome">Unearned Income per Month</string>
    <string name="tvDependentCare">Monthly dependent care costs</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="welcome">Welcome to the Ohio Legal Aid Assistant!\n\nCreated by Joshua M. Goodwin</string>
    <string-array name="frequency">
        <item>per hour</item>
        <item>per week</item>
        <item>every other week</item>
        <item>twice per month</item>
        <item>monthly</item>
        <item>annually</item>
    </string-array>
    <string name="household_information_heading">HOUSEHOLD INFORMATION</string>
    <string name="tvAGDisabled">Are there disabled members in AG?</string>
    <string name="tvAGSSI">Are there SSI, DFA, or PRC recipients in AG (categorical eligibility)? </string>
    <string name="income_information_heading">INCOME INFORMATION</string>
    <string name="tvEarnedIncome">Gross earned income of AG</string>
    <string name="earnedIncome">Earned income</string>
    <string name="headingMonthlyExpenses">MONTHLY EXPENSES</string>
    <string name="tvRent">Rent or mortgage</string>
    <string name="Rent">Rent/mortgage</string>
    <string name="tvPropertyTaxes">Property Taxes</string>
    <string name="tvPropertyInsurance">Property insurance</string>
    <string name="tvChildSupportNonAG">Child support for non-AG member</string>
    <string name="etChildSupport">Child support</string>
    <string name="tvMedicalExpenses">Medical expenses</string>
    <string name="headingUtilities">MONTHLY UTILITIES (check all that apply)</string>
    <string name="clHomeless">Client is homeless</string>
    <string name="heatingCooling">Heating and cooling costs</string>
    <string name="electricGasOil">Electric/gas/oil (non-heating)</string>
    <string name="waterSewer">Water or sewer</string>
    <string name="garbageTrash">Garbage or trash</string>
    <string name="phone">Telephone</string>
    <string name="calculators">CALCULATORS</string>
    <string name="add_court">Add new court</string>
    <string name="edit_courts">Edit courts</string>
    <string name="child_support_address">https://www.lawhelpinteractive.org/login_form?template_id=template.2014-06-05.4419790386</string>
    <string-array name="Rules">
        <item>Federal Rules of Evidence</item>
        <item>Ohio Rules of Civil Procedure</item>
    </string-array>
    <string name="OWF_calculator">OWF</string>
    <string name="federal_poverty">Federal Poverty Level</string>
    <string name="food_stamps">Food Stamps</string>
    <string name="child_support">Child Support Worksheet</string>
    <string name="APR">APR</string>
    <string-array name="Calculators">
        <item>OWF Calculator</item>
        <item>Federal Poverty Calculator</item>
        <item>Food Stamps</item>
        <item>Child Support</item>
        <item>APR</item>
    </string-array>
    <string-array name="DrawerHeadings">
        <item>Calculators</item>
        <item>PIKA</item>
        <item>Court Dockets</item>
        <item>Forms</item>
        <item>Rules</item>
    </string-array>
    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="fre_by_rule">
        <item>I. General Provisions</item>
        <item>II. Judicial Notice</item>
        <item>III. Presumptions in Civil Cases</item>
        <item>IV. Relevance and Its Limits</item>
        <item>V. Privileges</item>
        <item>VI. Witnesses</item>
        <item>VII. Opinions and Expert Testimony</item>
        <item>VIII. Hearsay</item>
        <item>IX. Authentication and Identification</item>
        <item>X. Contents of Writings/Recordings</item>
        <item>XI. Miscellaneous Rules</item>
    </string-array>
    <string-array name="fre_by_rule_0">
        <item>101. Scope; Definitions</item>
        <item>102. Purpose</item>
        <item>103. Rulings on Evidence</item>
        <item>104. Preliminary Questions</item>
        <item>105. Limiting Evidence that is Not Admissible</item>
        <item>106. Remainder/Related Writings</item>
    </string-array>
    <string-array name="fre_by_rule_101">
        <item>1&lt;b>RULE 101. SCOPE; DEFINITIONS&lt;/b></item>
        <item>1&lt;b>(a) Scope.&lt;/b> These rules apply to proceedings in United States courts. The specific courts and proceedings to which the rules apply, along with exceptions, are set out in Rule 1101.</item>
        <item>1&lt;b>(b) Definitions.&lt;/b> In these rules:</item>
        <item>2(1) “civil case” means a civil action or proceeding;</item>
        <item>2(2) “criminal case” includes a criminal proceeding;</item>
        <item>2(3) “public office” includes a public agency;</item>
        <item>2(4) “record” includes a memorandum, report, or data compilation;</item>
        <item>2(5) a “rule prescribed by the Supreme Court” means a rule adopted by the Supreme Court under statutory authority; and</item>
        <item>2(6) a reference to any kind of written material or any other medium includes electronically stored information.</item>
    </string-array>
    <string-array name="fre_by_rule_102">
        <item>1&lt;b>RULE 102. PURPOSE&lt;/b></item>
        <item>1These rules should be construed so as to administer every proceeding fairly, eliminate unjustifiable expense and delay, and promote the development of evidence law, to the end of ascertaining the truth and securing a just determination.</item>
    </string-array>
    <string-array name="fre_by_rule_103">
        <item>1&lt;b>RULE 103. RULINGS ON EVIDENCE&lt;/b></item>
        <item>1&lt;b>(a) Preserving a Claim of Error.&lt;/b> A party may claim error in a ruling to admit or exclude evidence only if the error affects a substantial right of the party and:</item>
        <item>2&lt;b>(1)&lt;/b> if the ruling admits evidence, a party, on the record:</item>
        <item>3&lt;b>(A)&lt;/b> timely objects or moves to strike; and</item>
        <item>3&lt;b>(B)&lt;/b> states the specific ground, unless it was apparent from the context; or</item>
        <item>2&lt;b>(2)&lt;/b> if the ruling excludes evidence, a party informs the court of its substance by an offer of proof, unless the substance was apparent from the context.</item>
        <item>1&lt;b>(b) Not Needing to Renew an Objection or Offer of Proof.&lt;/b> Once the court rules definitively on the record — either before or at trial — a party need not renew an objection or offer of proof to preserve a claim of error for appeal.</item>
        <item>1&lt;b>(c) Court\'s Statement About the Ruling; Directing an Offer of Proof.&lt;/b> The court may make any statement about the character or form of the evidence, the objection made, and the ruling. The court may direct that an offer of proof be made in question-and-answer form.</item>
        <item>1&lt;b>(d) Preventing the Jury from Hearing Inadmissible Evidence.&lt;/b> To the extent practicable, the court must conduct a jury trial so that inadmissible evidence is not suggested to the jury by any means.</item>
        <item>1&lt;b>(e) Taking Notice of Plain Error.&lt;/b> A court may take notice of a plain error affecting a substantial right, even if the claim of error was not properly preserved.</item>
    </string-array>
    <string-array name="fre_by_rule_104">
        <item>1&lt;b>RULE 104. PRELIMINARY QUESTIONS&lt;/b></item>
        <item>1&lt;b>(a) In General.&lt;/b> The court must decide any preliminary question about whether a witness is qualified, a privilege exists, or evidence is admissible. In so deciding, the court is not bound by evidence rules, except those on privilege.</item>
        <item>1&lt;b>(b) Relevance That Depends on a Fact.&lt;/b> When the relevance of evidence depends on whether a fact exists, proof must be introduced sufficient to support a finding that the fact does exist. The court may admit the proposed evidence on the condition that the proof be introduced later.</item>
        <item>1&lt;b>(c) Conducting a Hearing So That the Jury Cannot Hear It.&lt;/b> The court must conduct any hearing on a preliminary question so that the jury cannot hear it if:</item>
        <item>2&lt;b>(1)&lt;/b> the hearing involves the admissibility of a confession;</item>
        <item>2&lt;b>(2)&lt;/b> a defendant in a criminal case is a witness and so requests; or</item>
        <item>2&lt;b>(3)&lt;/b> justice so requires</item>
        <item>1&lt;b>(d) Cross-Examining a Defendant in a Criminal Case.&lt;/b>  By testifying on a preliminary question, a defendant in a criminal case does not become subject to cross-examination on other issues in the case.</item>
        <item>1&lt;b>(e) Evidence Relevant to Weight and Credibility.&lt;/b> This rule does not limit a party\'s right to introduce before the jury evidence that is relevant to the weight or credibility of other evidence.</item>
    </string-array>
    <string-array name="fre_by_rule_105">
        <item>1&lt;b>RULE 105. LIMITING EVIDENCE THAT IS NOT ADMISSIBLE AGAINST OTHER PARTIES OR FOR OTHER PURPOSES&lt;/b></item>
        <item>1If the court admits evidence that is admissible against a party or for a purpose — but not against another party or for another purpose — the court, on timely request, must restrict the evidence to its proper scope and instruct the jury accordingly.</item>
    </string-array>
    <string-array name="fre_by_rule_106">
        <item>1&lt;b>RULE 106. REMAINDER OF OR RELATED WRITINGS OR RECORDED STATEMENTS&lt;/b></item>
        <item>1If a party introduces all or part of a writing or recorded statement, an adverse party may require the introduction, at that time, of any other part — or any other writing or recorded statement — that in fairness ought to be considered at the same time.</item>
    </string-array>
    <string-array name="fre_by_rule_1">
        <item>201. Judicial Notice of Adjudicative Facts</item>
    </string-array>
</resources>