<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

	<TextView
		android:id="@+id/tvAGSize"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/tvAGSize" />

	<EditText
		android:id="@+id/AGSize"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/AGSize"
		android:inputType="number"	/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"	>
		
	<TextView
		android:id="@+id/tvGrossEarnedIncome"
		android:layout_width="0dp"
		android:layout_weight="50"
		android:layout_height="wrap_content"
		android:text="@string/tvGrossEarnedIncome" />
	
		<TextView
			
			android:layout_width="0dp"
			android:layout_weight="50"
			android:layout_height="wrap_content"
			android:text="@string/frequency" />
		</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"	>

		<EditText
			android:id="@+id/grossEarnedIncome"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:layout_weight="50"		/>

		<Spinner
			android:id="@+id/spinnerGrossPayFrequency"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="50"		/>

	</LinearLayout>

	<TextView
		android:id="@+id/tvHoursPerWeek"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/tvHoursPerWeek"
		android:visible="false" />

	<EditText
		android:id="@+id/hoursPerWeek"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hoursPerWeek"
		android:inputType="numberDecimal"
		android:visible="false" />

	<TextView
		android:id="@+id/tvDependentCare"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/tvDependentCare" />

	<EditText
		android:id="@+id/dependentCare"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/dependentCare"
		android:inputType="numberDecimal"	/>

	<TextView
		android:id="@+id/tvDeemedIncome"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/tvDeemedIncome" />

	<EditText
		android:id="@+id/deemedIncome"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/deemedIncome"
		android:inputType="numberDecimal"	/>

	<TextView
		android:id="@+id/tvUnearnedIncome"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/tvUnearnedIncome" />

	<EditText
		android:id="@+id/unearnedIncome"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/unearnedIncome"
		android:inputType="numberDecimal"	/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"	>

		<Button
			android:id="@+id/OWFSubmit"
			android:text="@string/OWFSubmit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<Button
			android:id="@+id/OWFClear"
			android:text="@string/OWFClear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		
	</LinearLayout>

</LinearLayout>
</ScrollView>
