<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent" >
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
		
		<TextView
			android:id="@+id/FPLTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="24sp" />
		
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/tvAGSize" />
		
		<EditText
			android:id="@+id/etAGSize"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:hint="AGSize"
			android:inputType="number"/>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="50"
				android:text="@string/tvGrossEarnedIncome" />
				
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="50"
				android:text="@string/frequency" />
		
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			
			<EditText
				android:id="@+id/etGrossEarnedIncome"
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="50"
				android:hint="@string/grossEarnedIncome"
				android:inputType="numberDecimal"/>
			
			<Spinner
				android:id="@+id/spinnerGrossPayFrequency"
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="50" />
		</LinearLayout>
		
		<TextView
			android:id="@+id/tvHoursPerWeek"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/tvHoursPerWeek"
			android:visible="false" />
		
		<EditText
			android:id="@+id/hoursPerWeek"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:visible="false"
			android:hint="@string/hoursPerWeek"
			android:inputType="numberDecimal" />
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/FPLSubmit"
				android:text="@string/OWFSubmit"
				android:layout_height="wrap_content"
				android:layout_weight="50"
				android:layout_width="0dp" />
			
			<Button
				android:id="@+id/FPLClear"
				android:text="@string/OWFClear"
				android:layout_height="wrap_content"
				android:layout_weight="50"
				android:layout_width="0dp" />
		
		</LinearLayout>

	</LinearLayout>

</ScrollView>
